--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,14 +16,18 @@
 <table>
   <thead>
     <tr>
-      <th>Content</th>
+      <th>#</th>
+      <th>Contents</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+  	<% count = 0 %>
     <% @user.microposts.each do |micropost| %>
       <tr>
+      	<% count = count + 1 %>
+      	<td><%= count %></td>
         <td><%= micropost.content %></td>
         <td><%= link_to 'Show', micropost %></td>
         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
